fixes stange alignment on summary modals

--- a/ext/riverlea/core/css/components/_form.css
+++ b/ext/riverlea/core/css/components/_form.css
@@ -49,6 +49,9 @@
 .crm-container .crm-summary-group .crm-section .label {
   width: 40%;
 }
+.crm-container .crm-summary-group .crm-section .content {
+  margin-left: 40%;
+}
 .crm-container .radio-inline label,
 .crm-container .checkbox-inline label {
   font-family: inherit;
